# MirahezeBots

./: .deepsource.toml  .flake8  .gitignore  .gitmodules  .travis.yml  CHANGELOG  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  RELEASE-NOTES-V6.md  RELEASE-NOTES-V7  RELEASE-NOTES-V7-1  RELEASE-NOTES-V7-2  RELEASE-NOTES-V7.md  RELEASE-NOTES-v3  RELEASE-NOTES-v4  RELEASE-NOTES-v5  SECURITY.md  compatibility.txt  cookiecutter.json  dbclean.py  default.db  dev-requirements.txt  hasan.db  malwaredomains.txt  pip-install.txt  requirements.txt  setup.cfg  setup.py  sonar-project.properties
.github/: auto-comment.yml  dependabot.yml  merge-when-green.yml
.github/workflows/: codeql-analysis.yml  compatible.yml  debian.yaml  dependabot-merge.yml  main.yml  shiftleft.yml  workflow.yml
MirahezeBots/: RELEASE-NOTES-v2  __init__.py  dbclean.py  example.db  hasan.db  version.py
MirahezeBots/plugins/: adminlist.py  channelmgnt.py  goofy.py  joinall.py  miraheze.py  phab.py  pingpong.py  responses.py  rss.py  shared.py  shortlinks.py  status.py  welcome.py  wikimgnt.py
MirahezeBots/plugins/config/: cloaks.csv  statuswikis.csv  users.csv
MirahezeBots/tests/: models.py  test_general.py
MirahezeBots/utils/: jsonparser.py  mwapihandler.py  phabapi.py  phabsearch.py
ci/: all.sh  install.sh  post_script.sh  pre_script.sh  script.sh
debian/: MirahezeBot_Plugins.triggers  changelog  control  copyright  mirahezebot-plugins.lintian-overrides  rules
docs/source/: conf.py  index.rst
modules/: __init__.py  adminlist.py  botversion.py  channelmgnt.py  converse.py  find_updates.py  forcejoin.py  join.py  joinall.py  mh_phab.py  miraheze.py  miraheze_page.py  models.py  owm-weather.py  ping.py  pyver.py  reminder.py  reminders.py  responses.py  rss.py  shortlinks.py  status.py  test_module.py  urls.py  version.py  weather.py  welcome.py
modules/config/: cloaks.csv  statuswikis.csv  users.csv
modules/utils/: __init__.py  phabricator.py
plugins/: adminlist.py  botversion.py  channelmgnt.py  find_updates.py  join.py  mh_phab.py  miraheze.py  pyver.py  reminders.py  responses.py  shortlinks.py  status.py  urls.py  welcome.py
plugins/config/: users.csv
tests/: __init__.py  models.py  test.py  test_general.py  test_json.json  test_json.py  test_phabricator.py  test_rss.py
tests/cassettes/: phabricator_find_tasks.yaml  phabricator_get_task.yaml
