[metadata]
license_file = LICENSE
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: Eiffel Forum License (EFL)
    License :: OSI Approved :: Eiffel Forum License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Communications :: Chat :: Internet Relay Chat
[options]
python_requires = >=3.6
[options.entry_points]
sopel.plugins =
    adminlist = MirahezeBots.plugins.adminlist
