[metadata]
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: Eiffel Forum License (EFL)
    License :: OSI Approved :: Eiffel Forum License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Communications :: Chat :: Internet Relay Chat
[options]
python_requires = >=3.6
[options.entry_points]
sopel.plugins =
    adminlist   = MirahezeBots.plugins.adminlist
    channelmgnt = MirahezeBots.plugins.channelmgnt
    joinall     = MirahezeBots.plugins.joinall
    miraheze    = MirahezeBots.plugins.miraheze
    phab        = MirahezeBots.plugins.phab
    pingpong    = MirahezeBots.plugins.pingpong
    responses   = MirahezeBots.plugins.responses
    rss         = MirahezeBots.plugins.rss
    shortlinks  = MirahezeBots.plugins.shortlinks
    status      = MirahezeBots.plugins.status
    welcome     = MirahezeBots.plugins.welcome
    goofy       = MirahezeBots.plugins.goofy
    wikimgnt    = MirahezeBots.plugins.wikimgnt
console_scripts =
    sopel-dbclean = MirahezeBots.dbclean:main
