[metadata]
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: Eiffel Forum License (EFL)
    License :: OSI Approved :: Eiffel Forum License
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Communications :: Chat :: Internet Relay Chat
[options]
python_requires = >=3.7
[options.entry_points]
sopel.plugins =
    miraheze    = MirahezeBots.plugins.miraheze
    phab        = MirahezeBots.plugins.phab
    responses   = MirahezeBots.plugins.responses
    shortlinks  = MirahezeBots.plugins.shortlinks
    status      = MirahezeBots.plugins.status
    welcome     = MirahezeBots.plugins.welcome
    goofy       = MirahezeBots.plugins.goofy
    shared      = MirahezeBots.plugins.shared
console_scripts =
    sopel-dbclean = MirahezeBots.dbclean:rundel
